# cpanel-doctor

./: .gitignore  CHANGELOG.md  LICENSE  PATCHES.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/cpanel_doctor/: __init__.py  __main__.py  cli.py  hook.py  tui.py
src/cpanel_doctor/assets/: cpanel_doctor_account_startdate.pl  cpanel_doctor_posthook.sh  cpses-postgres-ip.service  pam_cpses_postgres.sh
src/cpanel_doctor/core/: __init__.py  enrollment.py  patch.py  registry.py  runner.py
src/cpanel_doctor/patches/: __init__.py  account_startdate.py  https_redirect_date.py  pdns_upcp_removal.py  pg_cpses.py
tests/: test_patches.py
